[gd_scene load_steps=9 format=3 uid="uid://cqg6c0voa3kdc"]

[ext_resource type="Script" uid="uid://bgvfq1tbthdts" path="res://Sacrifice.gd" id="1_50n5x"]
[ext_resource type="Texture2D" uid="uid://cwruacx4qsfqs" path="res://test_npc_1.png" id="2_jum4h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jum4h"]
size = Vector2(200, 202)

[sub_resource type="CircleShape2D" id="CircleShape2D_jum4h"]
radius = 375.033

[sub_resource type="CircleShape2D" id="CircleShape2D_hpjd2"]
radius = 960.576

[sub_resource type="Animation" id="Animation_jum4h"]
resource_name = "death"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}

[sub_resource type="Animation" id="Animation_hpjd2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hpjd2"]
_data = {
&"RESET": SubResource("Animation_hpjd2"),
&"death": SubResource("Animation_jum4h")
}

[node name="Sacrifice" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
motion_mode = 1
script = ExtResource("1_50n5x")

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("RectangleShape2D_jum4h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_jum4h")

[node name="Label" type="Label" parent="Sprite2D"]
offset_right = 40.0
offset_bottom = 23.0

[node name="SightArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightArea"]
shape = SubResource("CircleShape2D_jum4h")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_hpjd2")

[node name="Wander" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hpjd2")
}

[connection signal="body_entered" from="SightArea" to="." method="_on_sight_area_body_entered"]
[connection signal="timeout" from="Wander" to="." method="_on_wander_timeout"]
