[gd_scene load_steps=9 format=3 uid="uid://cqg6c0voa3kdc"]

[ext_resource type="Script" uid="uid://bgvfq1tbthdts" path="res://script/Sacrifice.gd" id="1_50n5x"]
[ext_resource type="SpriteFrames" uid="uid://bngg8t4yoroou" path="res://scene/basic_sprite_frames.tres" id="12_12xoo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jum4h"]
size = Vector2(100, 100)

[sub_resource type="CircleShape2D" id="CircleShape2D_51u1b"]
radius = 284.044

[sub_resource type="CircleShape2D" id="CircleShape2D_hpjd2"]
radius = 374.534

[sub_resource type="SpriteFrames" id="SpriteFrames_fida2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_12xoo"]
font_size = 50
font_color = Color(0, 0, 1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_jum4h"]
radius = 160.378

[node name="Sacrifice" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
motion_mode = 1
script = ExtResource("1_50n5x")

[node name="Hurtbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jum4h")

[node name="SightArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightArea"]
shape = SubResource("CircleShape2D_51u1b")

[node name="ChaseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_hpjd2")

[node name="IdleActionTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ChasingSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -150)
sprite_frames = SubResource("SpriteFrames_fida2")
autoplay = "default"
frame_progress = 0.914646

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("12_12xoo")
animation = &"dead_R"

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 69.0
label_settings = SubResource("LabelSettings_12xoo")

[node name="HeartPopArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeartPopArea"]
shape = SubResource("CircleShape2D_jum4h")
disabled = true

[connection signal="body_entered" from="SightArea" to="." method="_on_sight_area_body_entered"]
[connection signal="body_exited" from="ChaseArea" to="." method="_on_chase_area_body_exited"]
[connection signal="timeout" from="IdleActionTimer" to="." method="_on_idle_action_timer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="HeartPopArea" to="." method="_on_heart_pop_area_body_entered"]
[connection signal="body_exited" from="HeartPopArea" to="." method="_on_heart_pop_area_body_exited"]
